tracking systems accordingly and can be queried by visiting the URLs::

  http://bugs.debian.org/<closed bug id>

  https://github.com/PyMVPA/PyMVPA/issues/<fixed bug id>

Releases
========

* 2.1.0 (unreleased)

  * Fixes

    - :func:`~mvpa2.misc.support.mask2slice` failed to convert an array of
      ``False`` values into ``slice(None, 0, None)`` (Fixes #56).

  * Enhancements

    - Add :func:`~mvpa2.misc.neighborhood.scatter_neighborhood` to aid
      sparse sampling of spaces.
    - Add :class:`~mvpa2.clfs.transerror.ConfusionMatrixError` to compute
      confusion matrices with a error function interface (e.g. for
      CrossValidation(errorfx=...). This class existed for a long time, but
      was hidden in the unit tests.
    - Add :class:`~mvpa2.mappers.fxy.FxyMapper` to perform arbitrary
      computations involving two datasets.
    - Add :class:`~mvpa2.mappers.base.CombinedMapper` to run a dataset through
      a set of mappers and combine their outputs.

* 2.0.1 (Tue, Mar 27 2012)

  Primarily a bugfix release

  * Fixes (21 BF commits)

    - hdf5 storage -- handle loading of objects with bound
      ``builtin_function_or_method``
    - use system-wide ``autosummary/generate.py`` for sphinx >= 1.1.2
	  (Closes: #658593)
    - :class:`ConditionalAttribute` should not loose value in deepcopy
	  when default off (Fixes #63)
    - correct handling of scalar mean/std values for :class:`ZScoreMapper`
    - MRI data import via _img2data now works with unicode
	  filenames (Fixes #60)
    - should work with IPython >= 0.11 now (Fixes #59)
    - various small fixes to improve tests and functionality
    - fix :class:`SMLR` segfaults on Windows (Thanks cgohlke for the patch)

  * Enhancements (29 ENH, OPT, and NF commits)

    - :class:`FxMapper` calls functions natively (instead of a slow
      row/column at a time) if they carry ``axis`` as the 2nd argument.
      Provides tremendous speed up for :func:`mean_sample` etc.