@@ -40,6 +40,8 @@ Releases
 
   * Enhancements
 
+    - All searchlight implementations can now optimally store the IDs of all
+      features for each generated ROI (conditional attr. ``roi_feature_ids``)
     - Add :func:`~mvpa2.misc.neighborhood.scatter_neighborhood` to aid
       sparse sampling of spaces.
     - Add :class:`~mvpa2.clfs.transerror.ConfusionMatrixError` to compute
